[gd_scene load_steps=2 format=3 uid="uid://cfxyklbsqis5u"]

[ext_resource type="Script" path="res://SceneManager.gd" id="1_sg16q"]

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_sg16q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 480.0
offset_top = 165.0
offset_right = -480.0
offset_bottom = -165.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Key"
alignment = 1

[node name="NumberOfPlayers" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Number of Players"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
item_count = 6
selected = 0
popup/item_0/text = "2"
popup/item_0/id = 2
popup/item_1/text = "4"
popup/item_1/id = 4
popup/item_2/text = "5"
popup/item_2/id = 6
popup/item_3/text = "6"
popup/item_3/id = 6
popup/item_4/text = "8"
popup/item_4/id = 8
popup/item_5/text = "10"
popup/item_5/id = 10

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
